samples/_failures_safe/1761539683_209051_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b7c3d142.c: In function ‘main’:
./samples/SAFE/__tmp_b7c3d142.c:151: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_b7c3d142.c:150:5: error: expected declaration or statement at end of input
  150 |     for
      |     ^~~
